--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-carousel": "^1.0.25"
+		"svelte-carousel": "^1.0.25",
+		"svelte-hero-icons": "^5.0.0"
 	}
 }
